--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-   
+
     <div id="container">
-       <div id="pixels">400px</div>
+        <div id="pixels">400px</div>
         <div id="em">20em</div>
         <div id="vw">20vw</div>
+        <div id="vh">60vh</div>
+        <div id="vmin">60vmin</div>
     </div>
 </body>
 </html>
